--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
     rev: 3.9.2
     hooks:
       - id: flake8
-        args: ['--config=setup.cfg']
+        args: ['--config=./setup.cfg', '--ignore=F401']
         additional_dependencies: [flake8-isort]
 
 
