--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
-max-line-length = 120
+max-line-length = 40
 exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
+ignore = F401
 
 [pycodestyle]
 max-line-length = 120
