--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [flake8]
-max-line-length = 40
-exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
+max-line-length = 100
+exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,*/src/*
 ignore = F401
 
 [pycodestyle]
 max-line-length = 120
-exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
+exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,*/src/*
 
 [mypy]
 python_version = 3.9
@@ -25,6 +25,6 @@ ignore_errors = True
 
 [coverage:run]
 include = pmsproject/*
-omit = *migrations*, *tests*
+omit = *migrations*, *tests*,*src*
 plugins =
     django_coverage_plugin
