--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-line-length = 100
 exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,*/src/*
-ignore = F401
+ignore = F401 E402 #this does not work, need to figure it out.
 
 [pycodestyle]
 max-line-length = 120
