Added media to be served by nginx with docker volume, works, and volume for debug nginx, works

--- a/compose/local/nginx/nginx.conf
+++ b/compose/local/nginx/nginx.conf
@@ -12,5 +12,10 @@ http {
        location / {
           proxy_pass http://mysite;
        }
+
+       location /media/ {
+          alias /usr/src/media/;
+       }
+
     }
 }
