--- a/compose/local/nginx/Dockerfile
+++ b/compose/local/nginx/Dockerfile
@@ -3,5 +3,7 @@ FROM nginx:1.17.6-alpine
 #RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx.conf /etc/nginx/nginx.conf
 
+RUN mkdir /usr/src/media/
+
 
 CMD ["nginx", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf"]
