--- a/docker-compose.dev.local.nginx.yml
+++ b/docker-compose.dev.local.nginx.yml
@@ -6,3 +6,6 @@ services:
     network_mode: "host"
     build: ./compose/local/nginx
     container_name: nginx
+    volumes:
+      - ./media/:/usr/src/media/
+      - ./nginxlogs/:/var/log/nginx
