Added websocket settings for nginx - daphne configuration, works, media nginx settings updated as well, works. At this moment all configuration: Django-daphne-nginx-postgres-redis works as expected

--- a/compose/local/nginx/Dockerfile
+++ b/compose/local/nginx/Dockerfile
@@ -3,7 +3,9 @@ FROM nginx:1.17.6-alpine
 #RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx.conf /etc/nginx/nginx.conf
 
-RUN mkdir /usr/src/media/
+#RUN mkdir /usr/src/media/
+#RUN mkdir /etc/nginx/media/
+RUN mkdir /usr/media/
 
 
 CMD ["nginx", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf"]
