--- a/compose/local/nginx/nginx.conf
+++ b/compose/local/nginx/nginx.conf
@@ -1,4 +1,9 @@
 
+events {
+    worker_connections 1024;
+}
+
+
 
 http {
     upstream mysite {
@@ -10,11 +15,30 @@ http {
        server_name localhost;
 
        location / {
-          proxy_pass http://mysite;
+          proxy_pass http://127.0.0.1:8000;
        }
 
-       location /media/ {
-          alias /usr/src/media/;
+
+       location /ws/ {
+            proxy_pass http://127.0.0.1:8000;
+            proxy_http_version 1.1;
+
+            proxy_read_timeout 86400;
+            proxy_redirect     off;
+
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
+        }
+
+
+       location /media {
+          alias /usr/media/;
+          types {}
+          default_type MIME;
        }
 
     }
